[tool.poetry]
name = "microblog-service"
version = "0.1.0"
description = "\"Python Advanced\" course diploma"
authors = ["https://github.com/Griy-dot-py"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
