[tool.poetry]
name = "microblog-service"
version = "0.1.0"
description = "\"Python Advanced\" course diploma"
authors = ["Grigoryy Remizov"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.30"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.10"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
faker = "^26.1.0"
pillow = "^10.4.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
